samples/_failures_safe/1761270525_22ce6c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ac8a9d1.c: In function ‘main’:
./samples/SAFE/__tmp_9ac8a9d1.c:169:16: error: missing terminating " character
  169 |         printf("3. Exit\n
      |                ^~~~~~~~~~
./samples/SAFE/__tmp_9ac8a9d1.c:169:9: error: expected expression at end of input
  169 |         printf("3. Exit\n
      |         ^~~~~~
./samples/SAFE/__tmp_9ac8a9d1.c:169:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9ac8a9d1.c:169:9: error: expected declaration or statement at end of input
